# Porsche-Contest

project/: CMakeLists.txt  README.md  http_api_documentation.md  ssh_id  ssh_id.pub
project/build_dir/: CMakeCache.txt  build.ninja  cmake_install.cmake
project/include/: script_executor.h
project/src/: client.cpp  main.cpp
project/src/python/: camera.py  main.py  testModel.py
project/src/python/variables/: variables.index
